Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/defaultMethods/private/Private07.out
Private07.java:9:20: compiler.err.mod.not.allowed.here: private
1 error
